// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-salarié > ATMP 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2298
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2248
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > ATMP 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2255
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > JEI 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3444
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > JEI 2`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 26503
salarié . rémunération . montant net social: 15966
salarié . rémunération . net . payé après impôt: 10951
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"salarié . contrat . salaire brut: 1560
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 152
salarié . rémunération . montant net social: 0
salarié . rémunération . net . payé après impôt: 1377
salarié . rémunération . net . à payer avant impôt: 1377

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . montant net social: 0
salarié . rémunération . net . payé après impôt: 2118
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > activité partielle 3`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1958
salarié . rémunération . montant net social: 0
salarié . rémunération . net . payé après impôt: 3790
salarié . rémunération . net . à payer avant impôt: 4484"
`;

exports[`calculate simulations-salarié > activité partielle 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1615
salarié . rémunération . montant net social: 611
salarié . rémunération . net . payé après impôt: 2272
salarié . rémunération . net . à payer avant impôt: 2404"
`;

exports[`calculate simulations-salarié > activité partielle 5`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2767
salarié . rémunération . montant net social: 1559
salarié . rémunération . net . payé après impôt: 2471
salarié . rémunération . net . à payer avant impôt: 2680"
`;

exports[`calculate simulations-salarié > activité partielle 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: 3750
salarié . coût total employeur: 740
salarié . rémunération . montant net social: 0
salarié . rémunération . net . payé après impôt: 1729
salarié . rémunération . net . à payer avant impôt: 1767"
`;

exports[`calculate simulations-salarié > activité partielle 7`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 980
salarié . rémunération . montant net social: 0
salarié . rémunération . net . payé après impôt: 2220
salarié . rémunération . net . à payer avant impôt: 2242"
`;

exports[`calculate simulations-salarié > aides 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2303
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 2`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12822
salarié . rémunération . montant net social: 8912
salarié . rémunération . net . payé après impôt: 7729
salarié . rémunération . net . à payer avant impôt: 8912

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > aides 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1866
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > aides 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2473
salarié . rémunération . montant net social: 1720
salarié . rémunération . net . payé après impôt: 1682
salarié . rémunération . net . à payer avant impôt: 1720

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1050
salarié . rémunération . montant net social: 1468
salarié . rémunération . net . payé après impôt: 1468
salarié . rémunération . net . à payer avant impôt: 1468

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3194
salarié . rémunération . montant net social: 2355
salarié . rémunération . net . payé après impôt: 2355
salarié . rémunération . net . à payer avant impôt: 2355"
`;

exports[`calculate simulations-salarié > atmp 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2338
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > avantages 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2471
salarié . rémunération . montant net social: 1640
salarié . rémunération . net . payé après impôt: 1518
salarié . rémunération . net . à payer avant impôt: 1540"
`;

exports[`calculate simulations-salarié > avantages 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2481
salarié . rémunération . montant net social: 1645
salarié . rémunération . net . payé après impôt: 1517
salarié . rémunération . net . à payer avant impôt: 1539"
`;

exports[`calculate simulations-salarié > avantages 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2400
salarié . rémunération . montant net social: 1610
salarié . rémunération . net . payé après impôt: 1526
salarié . rémunération . net . à payer avant impôt: 1548"
`;

exports[`calculate simulations-salarié > cadre 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4121
salarié . rémunération . montant net social: 2348
salarié . rémunération . net . payé après impôt: 2215
salarié . rémunération . net . à payer avant impôt: 2348"
`;

exports[`calculate simulations-salarié > cadre 2`] = `
"salarié . contrat . salaire brut: 8000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 11575
salarié . rémunération . montant net social: 6234
salarié . rémunération . net . payé après impôt: 5014
salarié . rémunération . net . à payer avant impôt: 6234"
`;

exports[`calculate simulations-salarié > cdd 1`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3098
salarié . rémunération . montant net social: 1894
salarié . rémunération . net . payé après impôt: 1838
salarié . rémunération . net . à payer avant impôt: 1894

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3373
salarié . rémunération . montant net social: 2009
salarié . rémunération . net . payé après impôt: 1935
salarié . rémunération . net . à payer avant impôt: 2009

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3659
salarié . rémunération . montant net social: 2197
salarié . rémunération . net . payé après impôt: 2109
salarié . rémunération . net . à payer avant impôt: 2197

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4412
salarié . rémunération . montant net social: 2508
salarié . rémunération . net . payé après impôt: 2241
salarié . rémunération . net . à payer avant impôt: 2375

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"salarié . contrat . salaire brut: 2200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3618
salarié . rémunération . montant net social: 1871
salarié . rémunération . net . payé après impôt: 1815
salarié . rémunération . net . à payer avant impôt: 1871

Notifications affichées : salarié . contrat . CDD . information, salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . montant net social: 1165
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > contrat pro 2`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . montant net social: 1165
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165"
`;

exports[`calculate simulations-salarié > effectif 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2294
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2305
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > effectif 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2305
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2071
salarié . rémunération . montant net social: 1613
salarié . rémunération . net . payé après impôt: 1613
salarié . rémunération . net . à payer avant impôt: 1613"
`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2106
salarié . rémunération . montant net social: 1584
salarié . rémunération . net . payé après impôt: 1562
salarié . rémunération . net . à payer avant impôt: 1584"
`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2077
salarié . rémunération . montant net social: 1588
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1588"
`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2077
salarié . rémunération . montant net social: 1588
salarié . rémunération . net . payé après impôt: 1566
salarié . rémunération . net . à payer avant impôt: 1588"
`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `
"salarié . contrat . salaire brut: 1700
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1771
salarié . rémunération . montant net social: 1342
salarié . rémunération . net . payé après impôt: 1342
salarié . rémunération . net . à payer avant impôt: 1342

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `
"salarié . contrat . salaire brut: 2600
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3126
salarié . rémunération . montant net social: 2125
salarié . rémunération . net . payé après impôt: 2125
salarié . rémunération . net . à payer avant impôt: 2125"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5002
salarié . rémunération . montant net social: 2857
salarié . rémunération . net . payé après impôt: 2700
salarié . rémunération . net . à payer avant impôt: 2924"
`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4693
salarié . rémunération . montant net social: 2544
salarié . rémunération . net . payé après impôt: 2695
salarié . rémunération . net . à payer avant impôt: 2836"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4385
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2412
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5095
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 3122
salarié . rémunération . net . à payer avant impôt: 3261"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4385
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2412
salarié . rémunération . net . à payer avant impôt: 2551"
`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4361
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2388
salarié . rémunération . net . à payer avant impôt: 2527"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4103
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2531
salarié . rémunération . net . à payer avant impôt: 2586"
`;

exports[`calculate simulations-salarié > frais pro - outre-mer 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4116
salarié . rémunération . montant net social: 2524
salarié . rémunération . net . payé après impôt: 2527
salarié . rémunération . net . à payer avant impôt: 2583"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2323
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1513
salarié . rémunération . net . à payer avant impôt: 1521"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4295
salarié . rémunération . montant net social: 2397
salarié . rémunération . net . payé après impôt: 2008
salarié . rémunération . net . à payer avant impôt: 2141"
`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2367
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1485
salarié . rémunération . net . à payer avant impôt: 1493"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5000
salarié . rémunération . montant net social: 2861
salarié . rémunération . net . payé après impôt: 2695
salarié . rémunération . net . à payer avant impôt: 2919"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4387
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2414
salarié . rémunération . net . à payer avant impôt: 2553"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4362
salarié . rémunération . montant net social: 2511
salarié . rémunération . net . payé après impôt: 2389
salarié . rémunération . net . à payer avant impôt: 2528"
`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `
"salarié . contrat . salaire brut: 3200
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4156
salarié . rémunération . montant net social: 2589
salarié . rémunération . net . payé après impôt: 2534
salarié . rémunération . net . à payer avant impôt: 2606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2381
salarié . rémunération . montant net social: 1636
salarié . rémunération . net . payé après impôt: 1628
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2342
salarié . rémunération . montant net social: 1606
salarié . rémunération . net . payé après impôt: 1598
salarié . rémunération . net . à payer avant impôt: 1606"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2409
salarié . rémunération . montant net social: 1636
salarié . rémunération . net . payé après impôt: 1628
salarié . rémunération . net . à payer avant impôt: 1636"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2380
salarié . rémunération . montant net social: 1616
salarié . rémunération . net . payé après impôt: 1607
salarié . rémunération . net . à payer avant impôt: 1616

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2349
salarié . rémunération . montant net social: 1589
salarié . rémunération . net . payé après impôt: 1581
salarié . rémunération . net . à payer avant impôt: 1589

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2331
salarié . rémunération . montant net social: 1601
salarié . rémunération . net . payé après impôt: 1592
salarié . rémunération . net . à payer avant impôt: 1601

Notifications affichées : salarié . convention collective . avertissement convention collective"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2917
salarié . coût total employeur: 3334
salarié . rémunération . montant net social: 1919
salarié . rémunération . net . payé après impôt: 1919
salarié . rémunération . net . à payer avant impôt: 1919

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2692
salarié . coût total employeur: 3252
salarié . rémunération . montant net social: 1889
salarié . rémunération . net . payé après impôt: 1881
salarié . rémunération . net . à payer avant impôt: 1889

Notifications affichées : salarié . temps de travail . heures complémentaires . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2298
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 1964
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2211
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . montant net social: 7151
salarié . rémunération . net . payé après impôt: 6264
salarié . rémunération . net . à payer avant impôt: 7151"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . montant net social: 7151
salarié . rémunération . net . payé après impôt: 6726
salarié . rémunération . net . à payer avant impôt: 7151"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `
"salarié . contrat . salaire brut: 9000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 12900
salarié . rémunération . montant net social: 7151
salarié . rémunération . net . payé après impôt: 6955
salarié . rémunération . net . à payer avant impôt: 7151"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2222
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2353
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 11`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . montant net social: 15966
salarié . rémunération . net . payé après impôt: 13031
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 12`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . montant net social: 15966
salarié . rémunération . net . payé après impôt: 11297
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . montant net social: 23970
salarié . rémunération . net . payé après impôt: 15769
salarié . rémunération . net . à payer avant impôt: 23970

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4513
salarié . rémunération . montant net social: 2590
salarié . rémunération . net . payé après impôt: 2450
salarié . rémunération . net . à payer avant impôt: 2590

Notifications affichées : salarié . contrat . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3665
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2282
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . montant net social: 23970
salarié . rémunération . net . payé après impôt: 15769
salarié . rémunération . net . à payer avant impôt: 23970

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2626
salarié . rémunération . net . payé après impôt: 2549
salarié . rémunération . net . à payer avant impôt: 2626"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"salarié . contrat . salaire brut: 30000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 42328
salarié . rémunération . montant net social: 26707
salarié . rémunération . net . payé après impôt: 17838
salarié . rémunération . net . à payer avant impôt: 26707

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2107
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > inversions 1`] = `
"salarié . contrat . salaire brut: 1850
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . montant net social: 1442
salarié . rémunération . net . payé après impôt: 1442
salarié . rémunération . net . à payer avant impôt: 1442"
`;

exports[`calculate simulations-salarié > inversions 2`] = `
"salarié . contrat . salaire brut: 2554
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3327
salarié . rémunération . montant net social: 2000
salarié . rémunération . net . payé après impôt: 1927
salarié . rémunération . net . à payer avant impôt: 2000"
`;

exports[`calculate simulations-salarié > inversions 3`] = `
"salarié . contrat . salaire brut: 2667
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3540
salarié . rémunération . montant net social: 2090
salarié . rémunération . net . payé après impôt: 2000
salarié . rémunération . net . à payer avant impôt: 2090"
`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . montant net social: 1182
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3665
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5435
salarié . rémunération . montant net social: 3140
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7794
salarié . rémunération . montant net social: 4344
salarié . rémunération . net . payé après impôt: 3720
salarié . rémunération . net . à payer avant impôt: 4344"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . montant net social: 1182
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4731
salarié . rémunération . montant net social: 3140
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7794
salarié . rémunération . montant net social: 4344
salarié . rémunération . net . payé après impôt: 3720
salarié . rémunération . net . à payer avant impôt: 4344"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1521
salarié . rémunération . montant net social: 1182
salarié . rémunération . net . payé après impôt: 1182
salarié . rémunération . net . à payer avant impôt: 1182

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2000
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3000
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4249
salarié . rémunération . montant net social: 3140
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `
"salarié . contrat . salaire brut: 5500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7353
salarié . rémunération . montant net social: 4344
salarié . rémunération . net . payé après impôt: 3720
salarié . rémunération . net . à payer avant impôt: 4344"
`;

exports[`calculate simulations-salarié > stage 1`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 500
salarié . rémunération . montant net social: 500
salarié . rémunération . net . payé après impôt: 500
salarié . rémunération . net . à payer avant impôt: 500

Notifications affichées : salarié . contrat . stage . avertissement, salarié . contrat . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2464
salarié . rémunération . montant net social: 1761
salarié . rémunération . net . payé après impôt: 1761
salarié . rémunération . net . à payer avant impôt: 1761

Notifications affichées : salarié . contrat . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1603
salarié . rémunération . montant net social: 1195
salarié . rémunération . net . payé après impôt: 1195
salarié . rémunération . net . à payer avant impôt: 1195

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3247
salarié . rémunération . montant net social: 1979
salarié . rémunération . net . payé après impôt: 1906
salarié . rémunération . net . à payer avant impôt: 1979"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"salarié . contrat . salaire brut: 1521
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1590
salarié . rémunération . montant net social: 1170
salarié . rémunération . net . payé après impôt: 1170
salarié . rémunération . net . à payer avant impôt: 1170

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3210
salarié . rémunération . montant net social: 1938
salarié . rémunération . net . payé après impôt: 1867
salarié . rémunération . net . à payer avant impôt: 1938"
`;

exports[`calculate simulations-salarié > temps partiel 1`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: 2188
salarié . coût total employeur: 2412
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > temps partiel 2`] = `
"salarié . contrat . salaire brut: 1857
salarié . contrat . salaire brut . équivalent temps plein: 2500
salarié . coût total employeur: 2401
salarié . rémunération . montant net social: 1448
salarié . rémunération . net . payé après impôt: 1448
salarié . rémunération . net . à payer avant impôt: 1448"
`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: 1750
salarié . coût total employeur: 1052
salarié . rémunération . montant net social: 770
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . contrat . temps de travail . temps partiel . contrôle temps min, salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3209
salarié . rémunération . montant net social: 1950
salarié . rémunération . net . payé après impôt: 1879
salarié . rémunération . net . à payer avant impôt: 1950"
`;

exports[`calculate simulations-salarié > treizième mois 2`] = `
"salarié . contrat . salaire brut: 2300
salarié . contrat . salaire brut . équivalent temps plein: 3096
salarié . coût total employeur: 3773
salarié . rémunération . montant net social: 2176
salarié . rémunération . net . payé après impôt: 2088
salarié . rémunération . net . à payer avant impôt: 2176"
`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"salarié . contrat . salaire brut: 100
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 123
salarié . rémunération . montant net social: 57
salarié . rémunération . net . payé après impôt: 57
salarié . rémunération . net . à payer avant impôt: 57

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"salarié . contrat . salaire brut: 250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 278
salarié . rémunération . montant net social: 176
salarié . rémunération . net . payé après impôt: 176
salarié . rémunération . net . à payer avant impôt: 176

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"salarié . contrat . salaire brut: 500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 536
salarié . rémunération . montant net social: 374
salarié . rémunération . net . payé après impôt: 374
salarié . rémunération . net . à payer avant impôt: 374

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"salarié . contrat . salaire brut: 750
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 794
salarié . rémunération . montant net social: 572
salarié . rémunération . net . payé après impôt: 572
salarié . rémunération . net . à payer avant impôt: 572

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"salarié . contrat . salaire brut: 1000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1052
salarié . rémunération . montant net social: 770
salarié . rémunération . net . payé après impôt: 770
salarié . rémunération . net . à payer avant impôt: 770

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"salarié . contrat . salaire brut: 1250
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1310
salarié . rémunération . montant net social: 968
salarié . rémunération . net . payé après impôt: 968
salarié . rémunération . net . à payer avant impôt: 968

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"salarié . contrat . salaire brut: 1500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1568
salarié . rémunération . montant net social: 1165
salarié . rémunération . net . payé après impôt: 1165
salarié . rémunération . net . à payer avant impôt: 1165

Notifications affichées : salarié . rémunération . assiette de vérification du SMIC . contrôle"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `
"salarié . contrat . salaire brut: 2000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 2283
salarié . rémunération . montant net social: 1561
salarié . rémunération . net . payé après impôt: 1553
salarié . rémunération . net . à payer avant impôt: 1561"
`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `
"salarié . contrat . salaire brut: 2500
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 3225
salarié . rémunération . montant net social: 1957
salarié . rémunération . net . payé après impôt: 1885
salarié . rémunération . net . à payer avant impôt: 1957"
`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `
"salarié . contrat . salaire brut: 3000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 4075
salarié . rémunération . montant net social: 2353
salarié . rémunération . net . payé après impôt: 2223
salarié . rémunération . net . à payer avant impôt: 2353"
`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `
"salarié . contrat . salaire brut: 4000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 5435
salarié . rémunération . montant net social: 3140
salarié . rémunération . net . payé après impôt: 2816
salarié . rémunération . net . à payer avant impôt: 3140"
`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `
"salarié . contrat . salaire brut: 5000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 7087
salarié . rémunération . montant net social: 3943
salarié . rémunération . net . payé après impôt: 3376
salarié . rémunération . net . à payer avant impôt: 3943"
`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"salarié . contrat . salaire brut: 10000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 14331
salarié . rémunération . montant net social: 7953
salarié . rémunération . net . payé après impôt: 6220
salarié . rémunération . net . à payer avant impôt: 7953

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"salarié . contrat . salaire brut: 20000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 28446
salarié . rémunération . montant net social: 15966
salarié . rémunération . net . payé après impôt: 10951
salarié . rémunération . net . à payer avant impôt: 15966

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"salarié . contrat . salaire brut: 100000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 129295
salarié . rémunération . montant net social: 86810
salarié . rémunération . net . payé après impôt: 46371
salarié . rémunération . net . à payer avant impôt: 86810

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"salarié . contrat . salaire brut: 1000000
salarié . contrat . salaire brut . équivalent temps plein: null
salarié . coût total employeur: 1245709
salarié . rémunération . montant net social: 895910
salarié . rémunération . net . payé après impôt: 446223
salarié . rémunération . net . à payer avant impôt: 895910

Notifications affichées : salarié . contrat . salaire brut . contrôle salaire élevé"
`;
